--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.2.14",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
